# pavex-files

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  errors.rs  lib.rs  serve_file.rs  static_file.rs
app/src/routes/: assets.rs  mod.rs  static_files.rs
public_html/: index.html
server/: Cargo.toml
server/configuration/: base.yml
server/src/: configuration.rs
server/tests/integration/: helpers.rs  main.rs  static_files.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
